Updated README and package configuration

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
     "docs:serve": "es-dev-server --root-dir=docs --node-resolve --watch",
     "analyze": "wca analyze \"**/*.js\" --outFile custom-elements.json",
-    "serve": "es-dev-server --app-index index.html --open --node-resolve --watch",
+    "serve": "cross-env NODE_OPTIONS=--openssl-legacy-provider es-dev-server --app-index index.html --open --node-resolve --watch",
     "test": "mocha --require @open-wc/testing",
     "test:coverage": "nyc --reporter=html --reporter=text npm run test",
     "test:watch": "karma start karma.conf.cjs --auto-watch=true --single-run=false",
