--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@web/test-runner-mocha": "^0.9.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.5.0",
+    "cross-env": "^7.0.3",
     "deepmerge": "^4.2.2",
     "es-dev-server": "^1.46.1",
     "eslint": "^6.8.0",
